--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,22 @@
         top: 50%;
         left: 50%;
         transform: translateX(-50%) translateY(-100%);
+        pointer-events: none;
+      }
+      .dot {
+        position: fixed;
+        z-index: 9999;
+        width: 10px;
+        pointer-events: none;
+        height: 5px;
+        top: 50%;
+        border-radius: 50%;
+        background-color: rgba(0, 0, 0, 0.4);
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        opacity: 0;
+        pointer-events: none;
+        transition: 0.5s;
       }
       h1 {
         position: fixed;
@@ -43,13 +59,36 @@
         padding: 12px;
         font-size: 24px;
         font-weight: 600;
-        background: linear-gradient(to bottom, white 40%, transparent);
+        background: linear-gradient(
+          to bottom,
+          rgba(255, 255, 255, 0.671) 40%,
+          transparent
+        );
+      }
+
+      .visible {
+        opacity: 1;
+      }
+
+      .animated {
+        animation: bounce 1s infinite ease-in-out;
+      }
+
+      @keyframes bounce {
+        0%,
+        100% {
+          transform: translateX(-50%) translateY(-100%);
+        }
+        50% {
+          transform: translateX(-50%) translateY(calc(-100% - 15px));
+        }
       }
     </style>
   </head>
   <body>
     <div id="app">
       <h1 id="locationName"></h1>
+      <div id="dot" class="dot"></div>
       <img id="marker" class="pointer" />
       <div id="map" style="width: 100%; height: 100dvh"></div>
     </div>
